--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </div>
     <div class="container border border-primary mt-3">
       <dl class="row">
-        <dt class="col-sm-3 mt-3">:link</dt>
-        <dd class="col-sm-9 mt-3">
+        <dt class="col-sm-3 mt-3 d-flex justify-content-center align-items-center">:link</dt>
+        <dd class="col-sm-9 mt-3 broder border-bottom">
           The :link CSS pseudo-class represents an element that has not yet been
           visited. It matches every unvisited &lta&gt or &ltarea&gt element that
           has an href attribute.
@@ -62,8 +62,8 @@
           </p>
         </dd>
 
-        <dt class="col-sm-3 mt-3">:visited</dt>
-        <dd class="col-sm-9 mt-3">
+        <dt class="col-sm-3 mt-3 d-flex justify-content-center align-items-center">:visited</dt>
+        <dd class="col-sm-9 mt-3 broder border-bottom">
           The :visited CSS pseudo-class represents links that the user has
           already visited. For privacy reasons, the styles that can be modified
           using this selector are very limited because of privacy issues.
@@ -74,8 +74,8 @@
           </p>
         </dd>
 
-        <dt class="col-sm-3 mt-3">:hover</dt>
-        <dd class="col-sm-9 mt-3">
+        <dt class="col-sm-3 mt-3 d-flex justify-content-center align-items-center">:hover</dt>
+        <dd class="col-sm-9 mt-3 broder border-bottom">
           The :hover CSS pseudo-class matches when the user interacts with an
           element with a pointing device, but does not necessarily activate it.
           It is generally triggered when the user hovers over an element with
@@ -86,7 +86,7 @@
           </p>
         </dd>
 
-        <dt class="col-sm-3 mt-3">:active</dt>
+        <dt class="col-sm-3 mt-3 d-flex justify-content-center align-items-center">:active</dt>
         <dd class="col-sm-9 mt-3">
           The :active CSS pseudo-class represents an element (such as a button)
           that is being activated by the user. When using a mouse, "activation"
